# rv-cli

./: .gitignore  README.md  pyproject.toml
aur/rv-cli/: .SRCINFO  PKGBUILD
aur/rv-cli-git/: .SRCINFO  PKGBUILD
debian/: build_deb.sh
debian/rv-cli/DEBIAN/: control  postinst  prerm
debian/rv-cli/usr/lib/rv-cli/rv_cli/: storage.py
debian/rv-cli/usr/share/doc/rv-cli/: LICENSE
rpm/: rv-cli.spec
rv_cli/: config.py  main.py  storage.py
src/rv_cli/: config.py  main.py
universal/: install.sh
