[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rv_cli"
version = "0.1.0"
description = "A fast, no-bs command-line shortcut manager"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "platformdirs>=4.0",
]

[project.scripts]
rv = "rv.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["rv*"]