[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rv_cli"
version = "0.1.0"
description = "A fast, no-bs command-line shortcut manager"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "darksoulxb" }
]
keywords = ["cli", "shortcuts", "terminal", "commands", "productivity"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.12",
    "platformdirs>=4.0",
]

[project.urls]
Homepage   = "https://github.com/darksoulxb/rv-cli"
Repository = "https://github.com/darksoulxb/rv-cli"
Issues     = "https://github.com/darksoulxb/rv-cli/issues"

[project.scripts]
rv = "rv_cli.main:app"

[tool.setuptools.packages.find]
where   = ["."]
include = ["rv_cli*"]
